WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304065
[GTK][GStreamer] REGRESSION(
303623@main
) webrtc/ephemeral-certificates-and-cnames.html is timing out
https://bugs.webkit.org/show_bug.cgi?id=304065
Summary
[GTK][GStreamer] REGRESSION(303623@main) webrtc/ephemeral-certificates-and-cn...
Philippe Normand
Reported
2025-12-12 06:59:48 PST
+++ This bug was initially created as a clone of
Bug #303924
+++
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-12-12 07:03:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55309
Philippe Normand
Comment 2
2025-12-14 03:53:03 PST
***
Bug 304130
has been marked as a duplicate of this bug. ***
EWS
Comment 3
2025-12-15 00:53:03 PST
Committed
304446@main
(14447d29ae4f): <
https://commits.webkit.org/304446@main
> Reviewed commits have been landed. Closing PR #55309 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug