[GTK][GStreamer] REGRESSION(303623@main) webrtc/ephemeral-certificates-and-cnames.html is timing out https://bugs.webkit.org/show_bug.cgi?id=304065

Reviewed by Xabier Rodriguez-Calvar.

The timeout was actually a crash, the mediastreamsrc element being disposed from a non-main thread.

Driving-by, set a 3 seconds timeout for the RiceBackend::GatherSocketAddresses sync IPC, and unflag
webrtc/datachannel/multiple-connections.html now that bug 303366 is fixed.

* LayoutTests/platform/gtk/TestExpectations:
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::GStreamerMediaEndpoint::prepareForClose):
(WebCore::GStreamerMediaEndpoint::close):
* Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingMediaSourceGStreamer.cpp:
(WebCore::RealtimeOutgoingMediaSourceGStreamer::stopOutgoingSource):
* Source/WebKit/WebProcess/Network/webrtc/rice/RiceBackendProxy.cpp:
(WebKit::RiceBackendProxy::gatherSocketAddresses):

Canonical link: https://commits.webkit.org/304446@main