Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp
@@ -2117,11 +2117,14 @@ void GStreamerMediaEndpoint::prepareForClose()
 {
     if (!m_pipeline || GST_STATE(m_pipeline.get()) <= GST_STATE_READY)
         return;
-    gst_element_call_async(m_pipeline.get(), reinterpret_cast<GstElementCallAsyncFunc>(+[](GstElement* element, gpointer) {
-        if (GST_STATE(element) <= GST_STATE_READY)
+
+    callOnMainThreadAndWait([weakPipeline = GThreadSafeWeakPtr { m_pipeline.get() }] mutable {
+        auto pipeline = weakPipeline.get();
+        if (!pipeline)
             return;
-        gst_element_set_state(element, GST_STATE_READY);
-    }), nullptr, nullptr);
+
+        webkitGstSetElementStateSynchronously(pipeline.get(), GST_STATE_READY);
+    });
 }
 
 void GStreamerMediaEndpoint::close()
@@ -2165,11 +2168,6 @@ void GStreamerMediaEndpoint::close()
 
 #if !RELEASE_LOG_DISABLED
     stopLoggingStats();
-#endif
-
-#if !GST_CHECK_VERSION(1, 27, 0)
-    if (m_pipeline)
-        teardownPipeline();
 #endif
 }
 
